--- a/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/profile/profilemain.xhtml
+++ b/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/profile/profilemain.xhtml
@@ -171,6 +171,18 @@
                                 <h:outputText value="Skills"/>
                             </f:facet>
                             <h:outputText value="#{row.highlightResult}" escape="false"/>
+                            <h:panelGroup rendered="#{!empty row.freelancer.sortedTags}">
+                                <div class="tags tagsWide">
+                                    <a4j:repeat value="#{row.freelancer.sortedTags}" var="tag">
+                                        <div class="tag">
+                                            <pretty:link styleClass="text" mappingId="tagoverview" title="Zeige alle Freiberufler mit diesem Tag">
+                                                <f:param value="#{tag.id}"/>
+                                                <h:outputText value="#{tag.name}"/>
+                                            </pretty:link>
+                                        </div>
+                                    </a4j:repeat>
+                                </div>
+                            </h:panelGroup>
                         </h:column>
                         <h:column>
                             <h:commandLink title="Eintrag aus Suche löschen"
