--- a/src/main/webapp/include/freelancer/freelancermain.xhtml
+++ b/src/main/webapp/include/freelancer/freelancermain.xhtml
@@ -548,7 +548,7 @@
 
                                 <b:combobox value="#{freelancerBackingBean.data.newSchwerpunkte}"
                                             values="#{freelancerBackingBean.availableTagsSchwerpunkte}"
-                                            nullable="false">
+                                            nullable="true">
                                     <f:converter converterId="tagConverter"/>
                                 </b:combobox>
 
@@ -582,7 +582,7 @@
 
                                 <b:combobox value="#{freelancerBackingBean.data.newFunktion}"
                                             values="#{freelancerBackingBean.availableTagsFunktionen}"
-                                            nullable="false">
+                                            nullable="true">
                                     <f:converter converterId="tagConverter"/>
                                 </b:combobox>
 
@@ -616,7 +616,7 @@
 
                                 <b:combobox value="#{freelancerBackingBean.data.newEinsatzOrt}"
                                             values="#{freelancerBackingBean.availableTagsEinsatzorte}"
-                                            nullable="false">
+                                            nullable="true">
                                     <f:converter converterId="tagConverter"/>
                                 </b:combobox>
 
@@ -650,7 +650,7 @@
 
                                 <b:combobox value="#{freelancerBackingBean.data.newBemerkung}"
                                             values="#{freelancerBackingBean.availableTagsBemerkungen}"
-                                            nullable="false">
+                                            nullable="true">
                                     <f:converter converterId="tagConverter"/>
                                 </b:combobox>
 
