--- a/src/main/webapp/include/tags/tagsmain.xhtml
+++ b/src/main/webapp/include/tags/tagsmain.xhtml
@@ -128,7 +128,9 @@
                                 <h:outputText value="Letzter Kontakt"/>
                             </pretty:link>
                         </f:facet>
-                        <h:outputText value="#{row.lastContact}"/>
+                        <h:outputText value="#{row.lastContactDate}">
+                            <f:converter converterId="dateConverter"/>
+                        </h:outputText>
                     </h:column>
                     <h:column>
                         <f:facet name="header">
