--- a/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/template/powerstaff.xhtml
+++ b/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/template/powerstaff.xhtml
@@ -28,7 +28,7 @@
                  }
             </script>
 
-			<h:form id="form">
+			<h:form id="form" acceptcharset="UTF-8">
 
                 <ui:include src="/include/scripts.xhtml"/>
 
